--- a/client/src/components/hangman/scaffold.css
+++ b/client/src/components/hangman/scaffold.css
@@ -1,6 +1,9 @@
 .scaffold-container {
-  width: 80%;
-  height: 100%;
-  margin-left: auto;
+  width: 98%;
+  height: 98%;
   padding: 0.75rem;
+}
+
+.svg-box {
+  margin-left: 45%;
 }
