--- a/client/src/components/keys/keys.styles.css
+++ b/client/src/components/keys/keys.styles.css
@@ -2,7 +2,6 @@
   .btn-overlay {
     margin-left: 0.25rem;
   }
-
   .btn-circle {
     width: 2.6rem;
     height: 2.6rem;
@@ -18,8 +17,8 @@
     margin-left: 0.75rem;
   }
   .btn-circle {
-    width: 2rem;
-    height: 2rem;
+    width: 1.75rem;
+    height: 1.75rem;
     padding: 2px;
     font-size: 1rem;
     text-align: center;
@@ -31,8 +30,6 @@
   .btn-circle {
     font-size: large;
     border-radius: 50%;
-    width: 2.75rem;
-    height: 2.75rem;
     text-align: center;
   }
   .btn-overlay {
